<?xml version="1.0"?>
<package>
  <name>barrett_hand_gazebo</name>
  <version>0.1.2</version>
  <description>The barrett_hand_gazebo package</description>

  <maintainer email="egambaro@robotnik.es">elena</maintainer>

  <license>BSD</license>

  <url type="website">http://wiki.ros.org/barrett_sim_gazebo</url>
  <url type="repository">https://github.com/RobotnikAutomation/barrett_hand_sim.git</url>
  <url type="bugtracker">https://github.com/RobotnikAutomation/barrett_hand_sim/issues</url>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>barrett_hand_description</build_depend>
  <build_depend>gazebo_ros</build_depend>

  <run_depend>roscpp</run_depend>
  <run_depend>barrett_hand_description</run_depend>
  <run_depend>gazebo_ros</run_depend>

  <export>
	<gazebo_ros plugin_path="${prefix}/lib" gazebo_media_path="${prefix}" />    
  </export>

</package>
