<?xml version="1.0"?>
<package>
  <name>barrett_hand_sim</name>
  <version>0.1.2</version>
  <description>The barrett_hand_sim package</description>
  
  <maintainer email="rnavarro@robotnik.es">Román Navarro</maintainer>
  <maintainer email="egambaro@robotnik.es">Elena Gambaro</maintainer>
  
  <author email="egambaro@robotnik.es">Elena Gambaro</author>
  
  <license>BSD</license>

  <url type="website">http://wiki.ros.org/barrett_hand_sim</url>
  <url type="repository">https://github.com/RobotnikAutomation/barrett_hand_sim.git</url>
  <url type="bugtracker">https://github.com/RobotnikAutomation/barrett_hand_sim/issues</url>


  <buildtool_depend>catkin</buildtool_depend>
  
  <run_depend>barrett_hand_gazebo</run_depend>
  <run_depend>barrett_hand_control</run_depend>

  <export><metapackage/></export>

</package>
